# polyfunctors

./: .gitignore  README.md  polyfunctors.cabal
src/Control/: PolyFunctor.hs
test/: Spec.hs
