cabal-version:       >=1.10
name:                polyfunctors
version:             0.2.0.0
synopsis:            Exotic functor instances for multi-parameter types
description:         A collection of functor-like type classes for types with
                     multiple type parameters. Includes BiFunctor, TriFunctor,
                     QuadFunctor, PentaFunctor, along with corresponding Foldable
                     and Traversable variants, Profunctor, Swap/Rotate operations,
                     and Validation (an Either with accumulating errors).
homepage:            https://github.com/owainlewis/polyfunctors
license:             MIT
license-file:        LICENSE
author:              Owain Lewis
maintainer:          owain@owainlewis.com
copyright:           (c) 2016-2026 Owain Lewis
category:            Control
build-type:          Simple

library
  exposed-modules:     Control.PolyFunctor
  build-depends:       base >=4.9 && <5
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall

test-suite polyfunctors-test
  type:                exitcode-stdio-1.0
  main-is:             Spec.hs
  hs-source-dirs:      test
  build-depends:       base >=4.9 && <5
                     , polyfunctors
                     , hspec >=2.0
                     , QuickCheck >=2.0
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
